--- a/README
+++ b/README
@@ -1,6 +1,8 @@
-qBoids
-======
+= qBoids
 
 This was an old Masters project for a course in Generative Creativity.
 
 It's some basic Boids-based flocking with some fancy colours thrown in.
+
+It's written in C++/Qt, so it requires the various Qt toolkit libraries 
+in order to be built.
